[package]
name = "naisu-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
naisu-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
