[package]
name = "naisu-evm"
version.workspace = true
edition.workspace = true

[dependencies]
naisu-core = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
